<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/appBg"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:orientation="vertical">

        <TextView
            android:id="@+id/ans"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:textSize="25sp"
            android:textAlignment="textEnd"
            android:gravity="end"/>

        <TextView
            android:id="@+id/insertion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@color/white"
            android:paddingTop="10dp"
            android:gravity="end"
            android:textAlignment="textEnd"
            android:textSize="35sp"
            android:text="@string/zero" />

        <TextView
            android:id="@+id/creditsText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:text="@string/appCredits"
            android:textAlignment="center"
            tools:ignore="TextContrastCheck" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="bottom">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="5dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:gravity="end">

            <Button
                android:id="@+id/cancelAll"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_marginEnd="10dp"
                android:backgroundTint="@drawable/button_color_scheme"
                android:text="@string/cancellAllBtn"
                android:textSize="18sp"
                app:cornerRadius="10dp"
                tools:ignore="ButtonStyle,TextContrastCheck" />

            <Button
                android:id="@+id/cancel"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_marginEnd="10dp"
                android:backgroundTint="@drawable/button_color_scheme"
                android:text="@string/cancelBtn"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:cornerRadius="10dp"
                tools:ignore="ButtonStyle,TextContrastCheck,TextContrastCheck" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/line5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp">

            <Button
                android:id="@+id/opSqrt"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="0.25"
                android:backgroundTint="@drawable/button_color_scheme"
                android:text="@string/sqrt"
                android:textSize="18sp"
                app:cornerRadius="10dp"
                tools:ignore="ButtonStyle,TextContrastCheck,VisualLintButtonSize" />

            <Button
                android:id="@+id/opPower"
                android:backgroundTint="@drawable/button_color_scheme"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_weight="0.25"
                android:layout_marginEnd="10dp"
                app:cornerRadius="10dp"
                android:textSize="20sp"
                android:text="@string/pow"
                tools:ignore="ButtonStyle,VisualLintButtonSize" />

            <Button
                android:id="@+id/opLog"
                android:backgroundTint="@drawable/button_color_scheme"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_weight="0.25"
                android:layout_marginEnd="10dp"
                app:cornerRadius="10dp"
                android:textSize="20sp"
                android:text="@string/log"
                tools:ignore="ButtonStyle,VisualLintButtonSize" />

            <Button
                android:id="@+id/opDivide"
                android:backgroundTint="@drawable/button_color_scheme"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_weight="0.25"
                app:cornerRadius="10dp"
                android:textSize="35sp"
                android:text="@string/divide"
                tools:ignore="ButtonStyle,VisualLintButtonSize" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/line4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="5dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp">

            <Button
                android:id="@+id/number7"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="0.25"
                android:backgroundTint="@drawable/button_color_scheme"
                android:text="@string/seven"
                android:textSize="35sp"
                app:cornerRadius="10dp"
                tools:ignore="ButtonStyle,VisualLintButtonSize" />

            <Button
                android:id="@+id/number8"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="0.25"
                android:backgroundTint="@drawable/button_color_scheme"
                android:text="@string/eight"
                android:textSize="35sp"
                app:cornerRadius="10dp"
                tools:ignore="ButtonStyle,VisualLintButtonSize" />

            <Button
                android:id="@+id/number9"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="0.25"
                android:backgroundTint="@drawable/button_color_scheme"
                android:text="@string/nine"
                android:textSize="35sp"
                app:cornerRadius="10dp"
                tools:ignore="ButtonStyle,VisualLintButtonSize" />

            <Button
                android:id="@+id/opMuls"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_weight="0.25"
                android:backgroundTint="@drawable/button_color_scheme"
                android:text="@string/muls"
                android:textSize="25sp"
                app:cornerRadius="10dp"
                tools:ignore="ButtonStyle,VisualLintButtonSize" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/line3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="5dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp">

            <Button
                android:id="@+id/number4"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="0.25"
                android:backgroundTint="@drawable/button_color_scheme"
                android:text="@string/four"
                android:textSize="35sp"
                app:cornerRadius="10dp"
                tools:ignore="ButtonStyle,VisualLintButtonSize" />

            <Button
                android:id="@+id/number5"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="0.25"
                android:backgroundTint="@drawable/button_color_scheme"
                android:text="@string/five"
                android:textSize="35sp"
                app:cornerRadius="10dp"
                tools:ignore="ButtonStyle,VisualLintButtonSize" />

            <Button
                android:id="@+id/number6"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="0.25"
                android:backgroundTint="@drawable/button_color_scheme"
                android:text="@string/six"
                android:textSize="35sp"
                app:cornerRadius="10dp"
                tools:ignore="ButtonStyle,VisualLintButtonSize" />

            <Button
                android:id="@+id/opMinus"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_weight="0.25"
                android:backgroundTint="@drawable/button_color_scheme"
                android:text="@string/minus"
                android:textSize="35sp"
                app:cornerRadius="10dp"
                tools:ignore="ButtonStyle,VisualLintButtonSize" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/line2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="5dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp">

            <Button
                android:id="@+id/number1"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="0.25"
                android:backgroundTint="@drawable/button_color_scheme"
                android:text="@string/one"
                android:textSize="35sp"
                app:cornerRadius="10dp"
                tools:ignore="ButtonStyle,VisualLintButtonSize" />

            <Button
                android:id="@+id/number2"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="0.25"
                android:backgroundTint="@drawable/button_color_scheme"
                android:text="@string/two"
                android:textSize="35sp"
                app:cornerRadius="10dp"
                tools:ignore="ButtonStyle,VisualLintButtonSize" />

            <Button
                android:id="@+id/number3"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="0.25"
                android:backgroundTint="@drawable/button_color_scheme"
                android:text="@string/three"
                android:textSize="35sp"
                app:cornerRadius="10dp"
                tools:ignore="ButtonStyle,VisualLintButtonSize" />

            <Button
                android:id="@+id/opPlus"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_weight="0.25"
                android:backgroundTint="@drawable/button_color_scheme"
                android:text="@string/plus"
                android:textSize="35sp"
                app:cornerRadius="10dp"
                tools:ignore="ButtonStyle,VisualLintButtonSize" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/line1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="5dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="15dp">

            <Button
                android:id="@+id/number0"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="0.25"
                android:backgroundTint="@drawable/button_color_scheme"
                android:text="@string/zero"
                android:textSize="35sp"
                app:cornerRadius="10dp"
                tools:ignore="ButtonStyle,DuplicateSpeakableTextCheck,VisualLintButtonSize" />

            <Button
                android:id="@+id/pointBtn"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="0.25"
                android:backgroundTint="@drawable/button_color_scheme"
                android:text="@string/point"
                android:textSize="35sp"
                app:cornerRadius="10dp"
                tools:ignore="ButtonStyle,VisualLintButtonSize" />

            <Button
                android:id="@+id/ansBtn"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="0.25"
                android:backgroundTint="@drawable/button_color_scheme"
                android:text="@string/ans"
                android:textSize="24sp"
                app:cornerRadius="10dp"
                tools:ignore="ButtonStyle,VisualLintButtonSize" />

            <Button
                android:id="@+id/opEqual"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_weight="0.25"
                android:backgroundTint="@drawable/button_color_scheme"
                android:text="@string/equal"
                android:textSize="35sp"
                app:cornerRadius="10dp"
                tools:ignore="ButtonStyle,VisualLintButtonSize" />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>